Removing the PMD errors
SVN-Revision: 23772